--- a/src/main/g8/default.properties
+++ b/src/main/g8/default.properties
@@ -1,4 +1,4 @@
-name = "scala_project"
-organisation = "africa.shuwari"
-package = "africa.shuwari"
-description = "<project description>"
+name = scala_project
+organisation = africa.shuwari
+package = africa.shuwari
+description = <project description>
